--- a/html/Anime-List.html
+++ b/html/Anime-List.html
@@ -9,8 +9,9 @@
   </head>
   
   <body>
-    <header>
-        <div class="header">
+
+    <header class="header">
+        <div class="content-wrap">
             <nav class="navigation"> 
               <ul>
                 <li><a href="Home.html">Home</a></li>
@@ -24,6 +25,15 @@
             </nav>
         </div>
     </header>
+
+
+    <footer class="footer"> 
+      <div class="content-wrap">
+        <a href="https://github.com/JustARandomPerson/Anime-Site"><img src="../img/github-logo.jpg" alt="GitHub Logo" height="38px" width="38px"></a>      
+        <p>This was made by:JustARandomPerson</p>
+      </div>
+    </footer>
+  </body>
   </body>
 
 </html>
